[gd_scene load_steps=6 format=3 uid="uid://3pyxwnheyyug"]

[ext_resource type="Script" path="res://GameOver.gd" id="1_inpiy"]
[ext_resource type="FontFile" uid="uid://20tbqopha0jx" path="res://C&C Red Alert [INET].ttf" id="2_3j130"]
[ext_resource type="Theme" uid="uid://cj5ctjqvfr51n" path="res://UITheme.tres" id="2_duku2"]

[sub_resource type="LabelSettings" id="LabelSettings_b07pm"]
font = ExtResource("2_3j130")
font_size = 100
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_072w2"]
font = ExtResource("2_3j130")
font_size = 25
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_inpiy")

[node name="Label" type="Label" parent="."]
offset_right = 640.0
offset_bottom = 256.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_b07pm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_top = 176.0
offset_right = 640.0
offset_bottom = 256.0
text = "Score: N/A"
label_settings = SubResource("LabelSettings_072w2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 280.0
offset_right = 624.0
offset_bottom = 360.0
theme = ExtResource("2_duku2")
text = "Retry"

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 376.0
offset_right = 624.0
offset_bottom = 456.0
theme = ExtResource("2_duku2")
text = "Main Menu"

[connection signal="button_down" from="RetryButton" to="." method="_on_retry_button_button_down"]
[connection signal="button_down" from="MainMenuButton" to="." method="_on_main_menu_button_button_down"]
